refactore: updated corsConfigurationSource