@@ -50,12 +50,13 @@ public class SpringSecurityConfig {
 
         httpSecurity.authorizeHttpRequests()
                 .requestMatchers(HttpMethod.POST,"/api/v1/customers/create").permitAll()
+                //.requestMatchers(HttpMethod.GET,"/api/v1/customers/{page}").permitAll()
                 .requestMatchers("/api/v1/customers/*").hasRole("user")
                 .requestMatchers("/admin/*").hasRole("admin") //CRUD для работы с пользователем
                 .anyRequest().authenticated() // остальной API будет доступен только аутентифицированным пользователям
                 .and()
                 .csrf().disable()  // отключаем встроенную защиту от csrf атак, используется из OAUTH2
-                .cors() // разрешаем запросы типа OPTIONS (preflight - проверочный запрос перед основным)
+                  .cors() // разрешаем запросы типа OPTIONS (preflight - проверочный запрос перед основным)
                 .and()
                 .oauth2ResourceServer() // влкючаем защиту OAUTH2
                 .jwt() // использует JWT для получения Access Token
@@ -73,7 +74,9 @@ public class SpringSecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
-        //corsConfiguration.setAllowedOrigins(Collections.singletonList(clientURL)); // на этот микросервис разрешаем запросы только от clientURL
+//        corsConfiguration.setAllowedOrigins(Collections.singletonList(clientURL)); // на этот микросервис разрешаем запросы только от clientURL
+        corsConfiguration.setAllowedOrigins(List.of("*")); // на этот микросервис разрешаем запросы только от clientURL
+
         corsConfiguration.setAllowedHeaders(List.of("*")); // указываем какие заголовки мы разрешаем в запросе
         corsConfiguration.setAllowedMethods(List.of("*")); // указываем какие методы мы разрешаем в запросе (post, get, update, delete)
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
